--- a/style.css
+++ b/style.css
@@ -200,7 +200,7 @@ p {
 
 /* Hero Section */
 #hero {
-	background-image: url(./ka.jpg);
+	background-image: url('/ka.jpg');
 	background-size: cover;
 	background-position: top center;
 	position: relative;
