--- a/style.css
+++ b/style.css
@@ -200,7 +200,7 @@ p {
 
 /* Hero Section */
 #hero {
-	background-image: url('Untitled design.png');
+	background-image: url('mozammel.png');
 	background-size: cover;
 	background-position: top center;
 	position: relative;
