--- a/style.css
+++ b/style.css
@@ -200,7 +200,7 @@ p {
 
 /* Hero Section */
 #hero {
-	background-image: url('mozammel.png');
+	background-image: url('mozammel1.png');
 	background-size: cover;
 	background-position: top center;
 	position: relative;
@@ -259,7 +259,7 @@ p {
 	flex-direction: column;
 	padding: 30px;
 	border-radius: 10px;
-	background-image: url('img-1.png');
+	background-image: url('mozammel.png');
 	background-size: cover;
 	margin: 10px 5%;
 	position: relative;
