--- a/style.css
+++ b/style.css
@@ -202,7 +202,7 @@ p {
 #hero {
 	background-image: url('mozammel1.png');
 	background-size: cover;
-	background-position: top center;
+	background-position: mid center;
 	position: relative;
 	z-index: 1;
 }
