--- a/style.css
+++ b/style.css
@@ -200,7 +200,7 @@ p {
 
 /* Hero Section */
 #hero {
-	background-image: url('mozammel1.png');
+	background-image: url('mozammel1.jpg');
 	background-size: cover;
 	background-position: mid center;
 	position: relative;
